<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="data"
            type="org.openintents.keyboardcts.Data"/>
    </data>

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="org.openintents.keyboardcts.MainActivity">

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/AppTheme.PopupOverlay"/>

        </android.support.design.widget.AppBarLayout>

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            android:padding="8dp"
            tools:context="org.openintents.keyboardcts.MainActivity"
            tools:showIn="@layout/activity_main">

            <TextView
                android:paddingTop="8dp"
                android:id="@+id/description_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/decimal_input_only"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                />
            />

            <EditText
                android:id="@+id/input_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/enter_a_number"
                android:inputType="numberDecimal"
                android:text="@={data.input1}"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/description_1"/>

            <TextView
                android:id="@+id/result_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/input_1"/>
            />

            <TextView
                android:paddingTop="8dp"
                android:id="@+id/description_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/decimal_input_with_separators"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/result_1"/>
            />

            <EditText
                android:id="@+id/input_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:digits="0123456789,."
                android:hint="@string/enter_a_number"
                android:inputType="numberDecimal"
                android:text="@={data.input2}"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/description_2"/>

            <TextView
                android:id="@+id/result_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/input_2"/>
            />

            <TextView
                android:paddingTop="8dp"
                android:id="@+id/description_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/shared_data"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/result_2"/>
            />

            <TextView
                android:id="@+id/data_to_share"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/description_3"/>
            />

        </android.support.constraint.ConstraintLayout>


        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="@dimen/fab_margin"
            app:srcCompat="@android:drawable/ic_menu_send"/>

    </android.support.design.widget.CoordinatorLayout>
</layout>